
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int sscanf (char*,char*,unsigned int*,unsigned int*,unsigned int*,unsigned int*) ;

int
isip ( char* ip )
{
 unsigned int a, b, c, d;

 sscanf ( ip, "%d.%d.%d.%d", &a, &b, &c, &d );
 if ( a < 1 || a > 255 )
  return ( 1 );
 if ( b < 0 || b > 255 )
  return ( 1 );
 if ( c < 0 || c > 255 )
  return ( 1 );
 if ( d < 0 || d > 255 )
  return ( 1 );
 return ( 0 );
}
