; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_711.c_isip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_711.c_isip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"%d.%d.%d.%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isip(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @sscanf(i8* %8, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %4, i32* %5, i32* %6, i32* %7)
  %10 = load i32, i32* %4, align 4
  %11 = icmp ult i32 %10, 1
  br i1 %11, label %15, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = icmp ugt i32 %13, 255
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %1
  store i32 1, i32* %2, align 4
  br label %38

16:                                               ; preds = %12
  %17 = load i32, i32* %5, align 4
  %18 = icmp ult i32 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %16
  %20 = load i32, i32* %5, align 4
  %21 = icmp ugt i32 %20, 255
  br i1 %21, label %22, label %23

22:                                               ; preds = %19, %16
  store i32 1, i32* %2, align 4
  br label %38

23:                                               ; preds = %19
  %24 = load i32, i32* %6, align 4
  %25 = icmp ult i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %23
  %27 = load i32, i32* %6, align 4
  %28 = icmp ugt i32 %27, 255
  br i1 %28, label %29, label %30

29:                                               ; preds = %26, %23
  store i32 1, i32* %2, align 4
  br label %38

30:                                               ; preds = %26
  %31 = load i32, i32* %7, align 4
  %32 = icmp ult i32 %31, 0
  br i1 %32, label %36, label %33

33:                                               ; preds = %30
  %34 = load i32, i32* %7, align 4
  %35 = icmp ugt i32 %34, 255
  br i1 %35, label %36, label %37

36:                                               ; preds = %33, %30
  store i32 1, i32* %2, align 4
  br label %38

37:                                               ; preds = %33
  store i32 0, i32* %2, align 4
  br label %38

38:                                               ; preds = %37, %36, %29, %22, %15
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
